# redlog_py

./: .gitignore  README.md  pyproject.toml
examples/: advanced.py  basic.py  performance.py  themes.py
redlog/: __init__.py  core.py  fields.py  formatters.py  sinks.py  themes.py  utils.py
tests/: test_basic.py
