[tool.poetry]
name = "redlog-py"
version = "0.1.1"
description = "A modern Python logging library"
authors = ["redthing1 <redthing1@alt.icu>"]
readme = "README.md"
packages = [{include = "redlog"}]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.0.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=redlog --cov-report=term-missing"
